# fragment-desk

./: package.json  tsconfig.json
.github/workflows/: main.yml
src/: App.tsx  index.tsx  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Editor.tsx  FileEditor.tsx  FileItem.tsx  FileOrCollection.tsx  InfoBar.tsx  InfoBox.tsx  Separator.tsx  SideBar.tsx  Sum.tsx  TopBar.tsx
src/components/DraggableList/: Element.tsx  List.tsx
src/components/ui/: Icon.tsx  Layout.tsx  Menu.tsx  Popover.tsx  ScrollArea.tsx  Spacer.tsx  Tooltip.tsx
src/hooks/: store.ts  useDirectoryConfig.ts  useDirectoryWatch.ts  useFs.ts
