[package]
name = "app"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch="dev", features = ["api-all"] }
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.9"



[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
